--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          source ~/.bashrc
-          conda activate shieask_cicd_demo
           cd /home/ubuntu/tmp/MOSS_DevOps_Demo/Vue_CICD_Demo
           git pull
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
           npm install
           npm run dev
         
