更新yml以挂起

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,4 @@ jobs:
           export NVM_DIR=~/.nvm
           source ~/.nvm/nvm.sh
           npm install
-          npm run dev
-        
+          nohup npm run dev serve >web.log 2>&1 & exit
