--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,13 +33,16 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
+          script: |
+            cd /home/ubuntu/tmp/
+            mkdir demo_docker
           #host: ${{ secrets.HOST }} # 这是一个GitHub Secrets变量，你需要在仓库设置中添加它，并填写你自己的腾讯云服务器的IP地址
           #key: ${{ secrets.TENCENT_CLOUD_SSH_KEY }} # 这是另一个GitHub Secrets变量，你需要在仓库设置中添加它，并填写你自己的腾讯云服务器的SSH密钥
-          script: | # 这是要在腾讯云服务器上执行的命令，可以有多行，每行以-开头
-            - docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest # 这是一个命令，用于从DockerHub拉取构建好的镜像
-            - docker stop ${{ secrets.DOCKER_HUB_REPO_NAME }} || true # 这是一个命令，用于停止已经运行的容器，如果没有则忽略错误
-            - docker rm ${{ secrets.DOCKER_HUB_REPO_NAME }} || true # 这是一个命令，用于删除已经停止的容器，如果没有则忽略错误
-            - docker run -d --name ${{ secrets.DOCKER_HUB_REPO_NAME }} -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest # 这是一个命令，用于运行新的容器，并将容器的80端口映射到服务器的80端口
+          #script: | # 这是要在腾讯云服务器上执行的命令，可以有多行，每行以-开头
+          #  - docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest # 这是一个命令，用于从DockerHub拉取构建好的镜像
+          #  - docker stop ${{ secrets.DOCKER_HUB_REPO_NAME }} || true # 这是一个命令，用于停止已经运行的容器，如果没有则忽略错误
+          #  - docker rm ${{ secrets.DOCKER_HUB_REPO_NAME }} || true # 这是一个命令，用于删除已经停止的容器，如果没有则忽略错误
+          #  - docker run -d --name ${{ secrets.DOCKER_HUB_REPO_NAME }} -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest # 这是一个命令，用于运行新的容器，并将容器的80端口映射到服务器的80端口
 
 
 
