--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "codemirror": "5.45.0",
     "core-js": "3.6.5",
     "dayjs": "^1.11.7",
+    "dompurify": "^3.0.1",
     "driver.js": "0.9.5",
     "dropzone": "5.5.1",
     "echarts": "4.2.1",
